[gd_scene load_steps=4 format=3 uid="uid://b2bs04605fxq0"]

[ext_resource type="Script" path="res://scripts/tooltip.gd" id="1_dosja"]
[ext_resource type="FontFile" uid="uid://tpd5pc8oxjmq" path="res://assets/fonts/ArchivoBlack-Regular.ttf" id="2_2rdtw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yt2yi"]
bg_color = Color(0.709804, 0.709804, 0.709804, 1)

[node name="tooltip" type="PanelContainer"]
z_index = 2
offset_right = 244.0
offset_bottom = 168.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yt2yi")
script = ExtResource("1_dosja")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="tooltip_title" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_2rdtw")
theme_override_font_sizes/font_size = 45
text = "Silly Item long name"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
mouse_filter = 2
color = Color(0.843137, 0.843137, 0.843137, 1)

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="tooltip_description" type="RichTextLabel" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0.207843, 0.207843, 0.207843, 0.243137)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = -80
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("2_2rdtw")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]blachalfjaelkajkajdsklfjaekjaklejfkalejioajfioajfioaejfioaejioajifo
eajefo
iajioajio[/center]"
fit_content = true
autowrap_mode = 0

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
mouse_filter = 2
color = Color(0.843137, 0.843137, 0.843137, 1)

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="tooltip_type" type="RichTextLabel" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("2_2rdtw")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[center]Type: [/center]"
